--- a/front/css/style.css
+++ b/front/css/style.css
@@ -37,6 +37,7 @@ main {
   justify-content: center;
   flex-direction: column;
   border: 1px solid #0000004f;
+  box-shadow: 0px 1px 2px #2D2D2D;
   border-radius: 15px;
 }
 
